<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

<PreferenceCategory
        android:title="@string/category_radio_title">
<!-- UMTS/HSDPA/HSUPA settings -->
<ListPreference
android:key="hspa"
android:title="@string/hspa_title_head"
android:summary="@string/hspa_summary_head"
android:entries="@array/hspa_entries"
            android:entryValues="@array/hspa_entries_values"
            android:defaultValue="23" />
</PreferenceCategory>
<PreferenceCategory
    	android:title="@string/category_touchkey_title">
	    <!-- Touch key backlight timeout -->
	    <ListPreference 
	        android:key="backlight_timeout"
	        android:title="@string/backlight_timeout_title_head"
	        android:summary="@string/backlight_timeout_summary_head"
	        android:entries="@array/backlight_timeout_entries"
  			android:entryValues="@array/backlight_timeout_entries_values"
  			android:defaultValue="1600" />
</PreferenceCategory>
<!-- Vibration Intensity settings -->
<PreferenceCategory
        android:title="@string/category_vibration_title">
<com.cyanogenmod.settings.device.VibrationIntensity android:key="vibration_intensity"
        android:title="@string/vibration_intensity_title"
        android:summary="@string/vibration_intensity_summary"
        android:defaultValue="6"
        android:max="6"
        />
</PreferenceCategory>
</PreferenceScreen>